test/analyze/type_check/non_indexable_indexed_error.myte
module test

type Rec { field: Int }

type TupleVariants =
  | Tuple1 (Int)
  | Tuple2 (String)

fun main() {
  1[0];
  (Rec { field: 1 })[0];
  (Tuple1(1))[0];

}